[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1" 
description = "A sample test package"
readme = "README.md"
authors = [
    {name = "yushimom", email = "yushimom@42.fr"},
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["42", "package", "count", "fun"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = {Homepage = "https://github.com/eagle/ft_package"}

[tool.setuptools.packages]
find = {}